# Testing-lab

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  ConvexHull.h  Display.cpp  Display.h  Dockerfile  README.md  compile_commands.json  cppcheck-report.xml  fuzz_test  main.cpp  mainTest.cpp  pvs-report.html  strace_out
app/: ConvexHull.cpp  ConvexHull.h  Display.cpp  Display.h  main.cpp
build-mull/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake
build-mull/libraries/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-mull/libraries/googletest/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-mull/libraries/googletest/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
build-pvs/: CMakeCache.txt  Makefile  cmake_install.cmake
cppcheck-html/: 0.html  index.html  stats.html
crashes/: crash-ae6beca560c9805a03a8b2f2e75e958b1175689a
fuzzing/: fuzz.cpp
gherkin_tests/features/: error_handling.feature  jarvis_hull.feature  performance_comparison.feature
gherkin_tests/features/step_definitions/: jarvis_hull.cpp
gherkin_tests/gherkin-catch-module/: CMakeLists.txt  CmakeLists.txt  testMain.cpp
gherkin_tests/gherkin-catch-module/features/: error_handling.feature  graham_hull.feature  jarvis_hull.feature  login.feture  performance_comparison.feature  visualization.feature
gherkin_tests/gherkin-catch-module/include/: gherkin-catch-module.hpp  gherkin_macros.hpp
gherkin_tests/gherkin-catch-module/src/: gherkin-catch-module.cpp
gherkin_tests/gherkin-catch-module/tests/: error_handling.cpp  graham_hull.cpp  jarvis_hull.cpp  performance_comparison.cpp  visualisation.cpp
gherkin_tests/gherkin-catch-module/tests/context/: commonFunction.hpp  context.cpp  context.hpp
tests/: test_common.cpp  test_comprassion.cpp  test_graham.cpp  test_jarvis.cpp  test_main.cpp  test_mocks.cpp
